--- a/Web Development/Assignment 1/Solution 7/index.html
+++ b/Web Development/Assignment 1/Solution 7/index.html
@@ -6,6 +6,7 @@
     <title>Assignment-1: Solution-7</title>
 </head>
 <body>
+    <!-- Basic Audio Player  -->
     <div class="music-player">
         <audio src="./audio file.mp3" controls autoplay title="Jawan Prevue track"></audio>
     </div>
